tring to fix jumping

--- a/css/olivinbud_styles.css
+++ b/css/olivinbud_styles.css
@@ -72,6 +72,4 @@
 
 .wrap-case:hover .wrap_case_image::before {
     border: 10px solid rgb(10, 42, 203);
-    z-index: 9;
-    opacity: .7;
 }
